<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/img1"
                        android:src="@drawable/img1"
                        android:minHeight="100dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:paddingBottom="20dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/img1"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:alpha="0.7"
                        android:src="@drawable/ic_plus"
                        app:backgroundTint="@color/colorPrimary"
                        app:fabSize="mini" />


                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="+"
                    android:textSize="@dimen/header_font_size" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/img2"
                        android:minHeight="100dp"
                        android:src="@drawable/img2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:paddingBottom="20dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/img2"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:alpha="0.7"
                        android:src="@drawable/ic_plus"
                        app:backgroundTint="@color/colorAccent"
                        app:fabSize="mini" />


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/result"
                        android:textSize="@dimen/header_font_size"
                        android:textStyle="bold" />

                    <com.rey.material.widget.Button
                        android:id="@+id/btnGetDetail"
                        style="@style/Material.Drawable.Ripple.Wave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/more"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/normal_font_size"
                        android:textStyle="bold"
                        app:rd_enable="true"
                        app:rd_rippleColor="@color/colorPrimaryLight" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:transitionName="simple_activity_transition"
                    tools:ignore="UnusedAttribute" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/range"
                        android:textSize="@dimen/header_font_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSeekbarProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="0"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/header_font_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text=" 0 "
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/normal_font_size" />


                    <com.rey.material.widget.Slider
                        android:id="@+id/seekBarRange"
                        style="@style/Material.Widget.Slider.Discrete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:sl_maxValue="255"
                        app:sl_minValue="0" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="255"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/normal_font_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/color_map"
                        android:textSize="@dimen/header_font_size"
                        android:textStyle="bold" />


                    <com.rey.material.widget.Button
                        android:id="@+id/btnApplyIntensity"
                        style="@style/Material.Drawable.Ripple.Wave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/apply"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/normal_font_size"
                        app:rd_enable="true"
                        app:rd_rippleColor="@color/colorPrimaryLight" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>